# giga-r1-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Embed.toml  LICENSE  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/arduino-giga/: Cargo.toml
crates/arduino-giga/src/: bridge.rs  can.rs  lib.rs  pins.rs  qspi.rs  usb.rs  wifi.rs
crates/giga-r1/: Cargo.toml
crates/giga-r1/src/: ble.rs  board.rs  ipc.rs  led.rs  lib.rs  pins.rs  wifi.rs
crates/giga-r1/src/firmware/: DEPENDENCIES
examples/dual_core_m4/: Cargo.toml  memory.x
examples/dual_core_m4/src/: main.rs
examples/dual_core_postcard_ipc/: README.md
examples/dual_core_postcard_ipc/m4_worker/: Cargo.toml  build.rs  memory.x
examples/dual_core_postcard_ipc/m4_worker/src/: main.rs
examples/dual_core_postcard_ipc/m7_master/: Cargo.toml  memory.x
examples/dual_core_postcard_ipc/m7_master/src/: main.rs
examples/dual_core_postcard_ipc/protocol/: Cargo.toml
examples/dual_core_postcard_ipc/protocol/src/: lib.rs
examples/m7_adc_read/: Cargo.toml  memory.x
examples/m7_adc_read/src/: main.rs
examples/m7_arduino_pins/: Cargo.toml  memory.x
examples/m7_arduino_pins/src/: main.rs
examples/m7_ble_beacon/: Cargo.toml
examples/m7_ble_beacon/src/: main.rs
examples/m7_boot0_button/: Cargo.toml
examples/m7_boot0_button/src/: main.rs
examples/m7_dac_adc_loopback/: Cargo.toml
examples/m7_dac_adc_loopback/src/: main.rs
examples/m7_defmt_heartbeat/: Cargo.toml
examples/m7_defmt_heartbeat/src/: main.rs
examples/m7_dual_core_bridge/: Cargo.toml  memory.x
examples/m7_dual_core_bridge/src/: main.rs
examples/m7_exti_button/: Cargo.toml  build.rs
examples/m7_exti_button/src/: main.rs
examples/m7_fdcan_loopback/: Cargo.toml
examples/m7_fdcan_loopback/src/: main.rs
examples/m7_gpio_loopback/: Cargo.toml
examples/m7_gpio_loopback/src/: main.rs
examples/m7_pwm_loopback/: Cargo.toml
examples/m7_pwm_loopback/src/: main.rs
examples/m7_qspi_jedec/: Cargo.toml
examples/m7_qspi_jedec/src/: main.rs
examples/m7_rgb_blinky/: Cargo.toml  build.rs  memory.x
examples/m7_rgb_blinky/src/: main.rs
examples/m7_spi_loopback/: Cargo.toml
examples/m7_spi_loopback/src/: main.rs
examples/m7_uart_loopback/: Cargo.toml
examples/m7_uart_loopback/src/: main.rs
examples/m7_usb_serial/: Cargo.toml
examples/m7_usb_serial/src/: main.rs
examples/m7_wifi_scan/: Cargo.toml
examples/m7_wifi_scan/src/: main.rs
examples/m7_wifi_sdio_probe/: Cargo.toml
examples/m7_wifi_sdio_probe/src/: main.rs
firmware/: Cargo.toml  DEPENDENCIES  LICENSE-permissive-binary-license-1.0.txt  README.md
firmware/src/: lib.rs
src/: main.rs
tools/: giga-r1-m7.yaml  set-giga-option-bytes.S
