[workspace]
resolver = "2"
members = [
    "crates/arduino-giga",
    "examples/m7_rgb_blinky",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["Anapeksha Mukherjee <https://github.com/anapeksha>"]
repository = "https://github.com/anapeksha/arduino-giga-rs"
homepage = "https://github.com/anapeksha/arduino-giga-rs"
documentation = "https://docs.rs/arduino-giga"
keywords = ["stm32h747", "embedded", "arduino", "giga", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-stm32 = { version = "0.6.0", default-features = false, features = [
    "rt",
    "unstable-pac",
] }
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
large_stack_frames = "deny"
mem_forget = "deny"
