[workspace]
resolver = "2"
exclude = ["examples/dual_core_m4"]
members = [
    "crates/giga-r1",
    "examples/m7_adc_read",
    "examples/m7_boot0_button",
    "examples/m7_dac_adc_loopback",
    "examples/m7_defmt_heartbeat",
    "examples/m7_dual_core_bridge",
    "examples/m7_exti_button",
    "examples/m7_fdcan_loopback",
    "examples/m7_gpio_loopback",
    "examples/m7_pwm_loopback",
    "examples/m7_qspi_jedec",
    "examples/m7_rgb_blinky",
    "examples/m7_spi_loopback",
    "examples/m7_uart_loopback",
    "examples/m7_usb_serial",
    "examples/m7_wifi_sdio_probe",
    "examples/m7_wifi_scan",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["Anapeksha Mukherjee <https://github.com/anapeksha>"]
repository = "https://github.com/anapeksha/giga-r1-rs"
homepage = "https://github.com/anapeksha/giga-r1-rs"
documentation = "https://docs.rs/giga-r1"
keywords = ["stm32h747", "embedded", "arduino", "giga", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.7.0", default-features = false }
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.10.0", default-features = false }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.6.0", default-features = false, features = [
    "rt",
    "unstable-pac",
] }
embassy-usb = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
static_cell = "2.1.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
large_stack_frames = "deny"
mem_forget = "deny"
