[package]
name = "giga-r1-wifi-firmware"
description = "CYW4343W firmware assets for the Arduino GIGA R1 WiFi."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
license-file = "LICENSE-permissive-binary-license-1.0.txt"
publish = true

[lib]
test = false
bench = false

[dependencies]
aligned.workspace = true

[lints]
workspace = true
