[package]
name = "giga-r1"
description = "Rust no_std board support package for the dual-core Arduino GIGA R1 WiFi."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
cortex-m = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
embedded-hal.workspace = true

[features]
default = []
defmt = ["dep:defmt"]
audio = []
camera = []
can = []
display = []
dual-core = ["dep:cortex-m"]
qspi = []
sdcard = []
usb = []
wifi = []

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
all-features = true

[lints]
workspace = true

[lib]
test = false
bench = false
