[package]
name = "dual-core-m4"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
giga-r1 = { path = "../../crates/giga-r1", features = ["dual-core"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-halt.workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "giga-r1/defmt",
]

[lints]
workspace = true
