[package]
name = "m7-dual-core-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "m7-dual-core-bridge"
path = "src/main.rs"
test = false
bench = false

[dependencies]
giga-r1 = { path = "../../crates/giga-r1", features = ["dual-core"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, features = ["stm32h747xi-cm7"] }
panic-halt.workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "giga-r1/defmt",
    "embassy-stm32/defmt",
]

[lints]
workspace = true
