[package]
name = "m7-usb-serial"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
arduino-giga = { path = "../../crates/arduino-giga", features = ["usb"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
embassy-executor = { workspace = true, features = ["executor-thread", "platform-cortex-m"] }
embassy-futures.workspace = true
embassy-stm32 = { workspace = true, features = ["stm32h747xi-cm7"] }
embassy-usb.workspace = true
panic-halt.workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "arduino-giga/defmt",
    "embassy-executor/defmt",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
]

[lints]
workspace = true
