[package]
name = "dual-core-postcard-m4-worker"
version = "0.1.0"
edition.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "dual-core-postcard-m4-worker"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
dual-core-postcard-protocol = { path = "../protocol" }
giga-r1 = { path = "../../../crates/giga-r1", features = ["ipc"] }
panic-halt.workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dual-core-postcard-protocol/defmt",
    "giga-r1/defmt",
]

[lints]
workspace = true
